--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -71,7 +71,7 @@
   "PCAIID": "PCAIID",
   "Packaging Type": "نوع التغليف",
   "Category": "التصنيف",
-  "NumberOfPieces": " قطع البكج الواحد",
+  "NumberOfPieces": " عدد القطع",
   "CustomsAmount": "رسوم جمركية",
   "Hermonized": "رمز التناغم",
   "provenance country": "بلد المنشأ",
@@ -79,8 +79,30 @@
   "Delivery Date": "تاريخ التسليم",
   "DocumentShipment":"توثيق الشحنة",
   "ShipmentPurpose":"غرض الشحنة",
-  "Documents":"أوراق /وثائق",
+  "Documented":"أوراق /وثائق",
   "NotDocumented":"غير ورقية",
   "TypeFirst":"رجاء اختر نوع الشحنة أولا",
-  "AllowedWeightError":"وزن شحنتك يجب الا تتجاوز الوزن "
+  "AllowedWeightError":"وزن شحنتك يجب الا تتجاوز الوزن ",
+  "NumberOfPiecesDescription":"عدد القطع في البكج المفرد  ",
+  "WeightDescription":"يختلف الوزن الأقصى المسموح به باختلاف نوع البكج ",
+  "GIFT":"هدية",
+  "SOLD":"تم البيع",
+  "NOT_SOLD":"غير مباعة",
+  "PERSONAL_EFFECTS":"تأثيرات شخصية",
+  "REPAIR_AND_RETURN":"تصليح واعادة",
+  "RETURN_AND_REPAIR":"اعادة وتصليح",
+  "SAMPLE":"نموذج",
+  "COMMERCIAL":"تجاري",
+  "PERSONAL_USE":"استخدام شخصي",
+  "groupPackageCount":"عدد البكج",
+  "NoResponse":"لا يوجد عرض متاح",
+  "ExtraCharges":"تكاليف اضافية",
+  "AddExtraCharges":"اضافة تكاليف",
+  "ChargeName":"اسم الكلفة ",
+  "ChargeValue":"القيمة",
+  "InProgress":"جاري المعالجة",
+  "SuccessfullRequest":" تم بنجاح",
+  "Add":"اضف"
+
+
 }
