--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -71,7 +71,7 @@
   "PCAIID": "PCAIID",
   "Packaging Type": "Packaging Type",
   "Category": "Category",
-  "NumberOfPieces": "Pieces of single package",
+  "NumberOfPieces": "Number of Pieces",
   "CustomsAmount": "Customs Amount",
   "Hermonized": "Harmonized Code",
   "provenance country": "Provenance Country",
@@ -82,5 +82,27 @@
   "Documented" :"Documents",
   "NotDocumented":"Others",
   "TypeFirst":"please select your shipment type first",
-  "AllowedWeightError":"your shipment's weight must not surpass "
+  "AllowedWeightError":"your shipment's weight must not surpass ",
+  "NumberOfPiecesDescription":"Number of pieces in  the single package ",
+  "WeightDescription":"the allowed maximum weight differs based on the package type  ",
+  "GIFT":"GIFT",
+  "SOLD":"SOLD",
+  "NOT_SOLD":"NOT_SOLD",
+  "PERSONAL_EFFECTS":"PERSONAL_EFFECTS",
+  "REPAIR_AND_RETURN":"REPAIR_AND_RETURN",
+  "RETURN_AND_REPAIR":"RETURN_AND_RETURN",
+  "SAMPLE":"SAMPLE",
+  "COMMERCIAL":"COMMERCIAL",
+  "PERSONAL_USE":"PERSONAL_USE",
+  "groupPackageCount":" Packages Number",
+  "NoResponse":"No available offer",
+  "ExtraCharges":"Extra Charges",
+  "AddExtraCharges":"Add Extra Charges",
+  "ChargeName":" Charge Name",
+  "ChargeValue":" Charge Value",
+  "InProgress": "In Progress",
+  "SuccessfullRequest":"Successfull Request",
+  "Add":"Add"
+  
+
 }
