--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -106,7 +106,9 @@
   "Sender":"Sender",
   "Payment":"The Payment",
   "SenderPayer":"New Tab will open if sender was chosen as the payer",
-  "ShipmentPrice":"Shipment Price"
+  "ShipmentPrice":"Shipment Price",
+  "Tax":"p.s:The price includes Taxes",
+  "NoTax":"p.s:The price doesn't include Taxes"
   
 
 }
