--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -97,7 +97,7 @@
   "groupPackageCount": "عدد البكج",
   "NoResponse": "لا يوجد عرض متاح",
   "ExtraCharges": "تكاليف اضافية",
-  "AddExtraCharges": "اضافة تكاليف",
+  "AddExtraCharges": "اضافة مبالغ اضافية",
   "ChargeName": "اسم الكلفة ",
   "ChargeValue": "القيمة",
   "InProgress": "جاري المعالجة",
