--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -96,7 +96,7 @@
   "PERSONAL_USE": "استخدام شخصي",
   "groupPackageCount": "عدد البكج",
   "NoResponse": "لا يوجد عرض متاح",
-  "ExtraCharges": "تكاليف اضافية",
+  "ExtraCharges": "مبالغ اضافية",
   "AddExtraCharges": "اضافة مبالغ اضافية",
   "ChargeName": "اسم الكلفة ",
   "ChargeValue": "القيمة",
