--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -58,7 +58,7 @@
   "Next": "التالي",
   "Done": "تم",
   "Choose": "اختر",
-  "Price": "السعر التقديري",
+  "Price": "سعر الشحن",
   "Previous": "السابق",
   "Recipient": "المرسل إليه",
   "Recipients": "المرسل إليهم",
@@ -68,11 +68,11 @@
   "Area": "المنطقة",
   "Block": "القطعة",
   "Jaddah": "الجادة",
-  "PCAIID": "PCAIID",
+  "PCAIID": "الرقم الآلي للعنوان",
   "Packaging Type": "نوع التغليف",
   "Category": "التصنيف",
   "NumberOfPieces": " عدد القطع",
-  "CustomsAmount": "رسوم جمركية",
+  "CustomsAmount": "السعر الخاص بالجمارك",
   "Hermonized": "رمز التناغم",
   "provenance country": "بلد المنشأ",
   "UnitPrice": "سعر الواحدة",
@@ -108,7 +108,7 @@
   "SenderPayer": "سيتم فتح نافذة جديدة للدفع عند تحديد المرسل للدفع",
   "ShipmentPrice": "سعر الشحنة",
   "cash": "كاش",
-  "online": "دفع الكتروني",
+  "online": "دفع أونلاين",
   "Tax": "السعر يتضمن رسوم الجمارك",
   "NoTax": "السعر لايتضمن رسوم الجمارك",
   "P.S": "ملاحظة"
