--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -59,7 +59,7 @@
   "Next": "Next",
   "Done": "Done",
   "Choose": "Choose",
-  "Price": "Estimated Price",
+  "Price": "Shipping Price",
   "Previous": "Previous",
   "Recipient": "Recipient",
   "Recipients": "Recipients",
