--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -111,5 +111,6 @@
   "online": "دفع أونلاين",
   "Tax": "السعر يتضمن رسوم الجمارك",
   "NoTax": "السعر لايتضمن رسوم الجمارك",
-  "P.S": "ملاحظة"
+  "P.S": "ملاحظة",
+  "FinalCost":"السعر الاجمالي"
 }
