--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -111,5 +111,6 @@
   "ShipmentPrice": "Shipment Price",
   "Tax": "The price includes Taxes",
   "NoTax": "The price doesn't include Taxes",
-  "P.S": "P.S"
+  "P.S": "P.S",
+  "FinalCost":"Total Cost"
 }
