--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -98,7 +98,7 @@
   "NoResponse": "لا يوجد عرض متاح",
   "ExtraCharges": "مبالغ اضافية",
   "AddExtraCharges": "اضافة مبالغ اضافية",
-  "ChargeName": "اسم الكلفة ",
+  "ChargeName": " الوصف ",
   "ChargeValue": "القيمة",
   "InProgress": "جاري المعالجة",
   "SuccessfullRequest": " تم بنجاح",
@@ -112,5 +112,7 @@
   "Tax": "السعر يتضمن رسوم الجمارك",
   "NoTax": "السعر لايتضمن رسوم الجمارك",
   "P.S": "ملاحظة",
-  "FinalCost":"السعر الاجمالي"
+  "FinalCost":"السعر الاجمالي",
+  "ActualWeight":"الوزن الفعلي",
+  "ActualWeightDescription":"الوزن الفعلي هو ناتج مفاضلة الوزن الحقيقي والوزن الحجمي"
 }
