--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -114,5 +114,6 @@
   "P.S": "ملاحظة",
   "FinalCost":"السعر الاجمالي",
   "ActualWeight":"الوزن الفعلي",
-  "ActualWeightDescription":"الوزن الفعلي هو ناتج مفاضلة الوزن الحقيقي والوزن الحجمي"
+  "ActualWeightDescription":"الوزن الفعلي هو ناتج مفاضلة الوزن الحقيقي والوزن الحجمي",
+  "Note":"ملاحظة"
 }
