--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -114,5 +114,6 @@
   "P.S": "P.S",
   "FinalCost":"Total Cost",
   "ActualWeight":"Actual Weight",
-  "ActualWeightDescription":"Actual Weight is the result of differentiation between real weight and volume wieght"
+  "ActualWeightDescription":"Actual Weight is the result of differentiation between real weight and volume wieght",
+  "Note":"Note"
 }
